--- a/app/src/main/res/layout/weather_ui.xml
+++ b/app/src/main/res/layout/weather_ui.xml
@@ -10,13 +10,13 @@
         android:textSize="18sp"
         android:textColor="@android:color/black"
         android:gravity="center_horizontal"
-        android:text="Welcome to droidConKe 2018 Android Things"
+        android:text="@string/welcome_text"
         android:layout_height="wrap_content" />
 
     <ImageView
         android:layout_width="200dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/icon"
+        android:src="@drawable/techtour"
         android:layout_gravity="center_horizontal"
         android:layout_height="200dp" />
 
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="match_parent"
             android:textSize="18sp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:id="@+id/txtPressure"
             android:textColor="@android:color/black"
